# promise_keeper

./: .gitignore  Anchor.toml  Cargo.toml  README.md  init_tasks_counter.ts  package.json  pnpm-lock.yaml  todo.txt
app/: .env.example  index.html  package.json  pnpm-lock.yaml  promise_keeper.ts  vite.config.ts
app/idl/: promise_keeper.json
app/src/: App.tsx  index.css  main.tsx  queries.ts  types.ts
app/src/components/: Button.tsx  CreateTaskModal.tsx  FileInput.tsx  FinishTaskModal.tsx  ModalContentWrapper.tsx  ModalProvider.tsx  ProfileButton.tsx  ProfileModal.tsx  Spinner.tsx  TaskInfoModal.tsx  TaskListItem.tsx
app/src/defaults/: time.ts
app/src/hooks/: useBlockchain.ts  userGetImgUrlFromCID.ts
app/src/queries/: profile.ts  task.ts
app/src/utils/: duration.ts
app/types/: promise_keeper.ts
idls/: promise_keeper.json
programs/promise_keeper/: Cargo.toml
programs/promise_keeper/src/: defaults.rs  errors.rs  lib.rs  task.rs  task_counter.rs  user.rs
tests/: Cargo.toml  promise_keeper.ts
tests/src/: lib.rs  tasks.rs  user_profile.rs
tests/src/utils/: context.rs  errors.rs  mod.rs  tasks.rs  user_profile.rs
