[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tests"

[dependencies]
anchor-client = { version = "0.31.0", features = ["async"] }
anchor-lang = "0.31.0"
tokio = { version = "1.44.1", features = ["full"] }
lazy_static = "1.5.0"
uuid = { version = "1.16.0", features = ["v4"] }